--- a/src/assets/styles/abstract/_colors.scss
+++ b/src/assets/styles/abstract/_colors.scss
@@ -1,26 +1,10 @@
 // Colors
 
 // Main Colors
-
-// Primary Colors
-$clr-primary-color-election-night: #110320;
-$clr-primary-color-fading-horizon: #442266;
-$clr-primary-color-iris-royale: #591b98;
-
-// Secondary Colors
-$clr-secondary-color-neon-spring: #3ffd6a;
-
-// Tertiary Colors
-$clr-tertiary-color-star-dust: #f9f3dd;
-$clr-tertiary-color-crackled: #f2e7d1;
-
-// Shadows
-
-// Gradients
+$clr-green: #4EE1A0;
 
 // Neutrals
 $clr-white: #ffffff;
-$clr-black: #000000;
-
-// Specific Colors
-$clr-background: #ffffff;
+$clr-light-grey: #D9D9D9;
+$clr-dark-grey: #242424;
+$clr-black: #151515;
