--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,52 +1,20 @@
-@use '../../assets/styles/abstract' as a;
-
 .button {
   display: block;
   width: max-content;
-  padding: 0.9rem 1.5rem;
+  padding-bottom: 0.7rem;
   font-weight: 700;
+  letter-spacing: 0.14288rem;
+  text-transform: uppercase;
   border: none;
-  border-radius: 1.75rem;
   cursor: pointer;
   transition: 0.15s;
 
-  &--wide {
-    padding: 0.9rem 2rem;
-  }
-
-  &--white {
-    color: a.$clr-primary-color-light-red;
-    background-color: a.$clr-neutral-white;
-    border: 1px solid a.$clr-neutral-white;
-
-    &:hover {
-      color: a.$clr-neutral-white;
-      background-color: a.$clr-primary-color-very-light-red;
-      border: 1px solid transparent;
-    }
-  }
-
-  &--transparent {
-    color: a.$clr-neutral-white;
+  &--green {
     background-color: transparent;
-    border: 1px solid a.$clr-neutral-white;
-
+    border-bottom: 3px $clr-green solid;
+    
     &:hover {
-      color: a.$clr-primary-color-very-light-red;
-      background-color: a.$clr-neutral-white;
-      border: 1px solid a.$clr-neutral-white;
-    }
-  }
-
-  &--gradient-red {
-    color: a.$clr-neutral-white;
-    background: a.$clr-gradient-red;
-    border: 1px solid a.$clr-neutral-white;
-
-    &:hover {
-      color: a.$clr-primary-color-very-light-red;
-      background-color: a.$clr-neutral-white;
-      border: 1px solid a.$clr-neutral-white;
+      color: $clr-green;
     }
   }
 }
