--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -1,7 +1,7 @@
 @use '../abstract/index' as a;
 
 h1, h2, h3, h4,
-h5, h6, p, a, button, label, input {
+h5, h6, p, a, button, label, input, textarea {
   font-family: 'Space Grotesk', sans-serif;
   color: a.$clr-white;
 }
