--- a/src/pages/Home/Skills/Skills.scss
+++ b/src/pages/Home/Skills/Skills.scss
@@ -4,10 +4,23 @@
   padding: 2.5rem 0;
   border-top: 1px solid $clr-white;
   border-bottom: 1px solid $clr-white;
+  position: relative;
   
   @include breakpoint(medium) {
     text-align: left;
     border-bottom: unset;
+  }
+
+  &:before {
+    content: url('/images/pattern-rings.svg');
+    position: absolute;
+    bottom: 0;
+    right: -8rem;
+    transform: translate(50%);
+
+    @include breakpoint(medium) {
+      right: -6rem;
+    }
   }
   
   &__list {
